--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -1,228 +1,39 @@
-// .logo_contact {
-//   position: absolute;
-//   top: 1rem;
-//   left: 45px;
-//   text-decoration: none;
-//   color: #fff;
-//   z-index: 5;
-//   font-size: 1.4rem;
-//   font-weight: 500;
-//   transition: 0.4s;
-//   @media screen and (max-width: 760px) {
-//     position: absolute;
-//     top: 0.8rem;
-//     left: 20px;
-//     font-size: 1.4rem;
-//   }
-// }
-
 .contact_wrapper {
-  display: flex;
-  justify-content: flex-end;
   min-height: 100vh;
-  flex-direction: column;
-  background: #4f7b87;
+  background: #815c33;
 }
 .contact_info_container {
-  height: 500px;
-  background: #4f7b87;
-  margin-top: 2rem;
-  //   position: absolute;
-  //   top: 0;
+  display: flex;
+  width: 100%;
+}
+.contact_info {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin: 4rem 6rem;
+  color: #d1cfcf;
+}
+
+.contact_info {
+  height: 600px;
 }
 
 .topImgContainer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  //   height: 800px;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-
-  @media screen and (max-width: 760px) {
-    width: 100%;
-    // height: 300px;
-  }
-}
-.topImg {
-  width: 100%;
-  position: relative;
-}
-
-.container {
-  display: flex;
-  height: 50rem;
-  justify-content: center;
-  height: 50%;
-
-  //   align-items: center;
+  // margin-top: 5rem;
 }
 
 footer {
   width: 100%;
+  height: 500px;
   position: relative;
   padding: 50px 100px;
-  background: #4f7b87;
+  background: #815c33;
+  color: #d1cfcf;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
   flex-direction: column;
-
-  margin-top: 20%;
-}
-
-footer .container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  // justify-content: flex-end;
-  align-items: center;
-  margin: 5rem 0;
-  flex-wrap: wrap;
-}
-
-footer .container .sec {
-  // margin-right: 30px;
-}
-
-footer .container .sec.aboutus {
-  // width: 30%;
-  margin-top: 4rem;
-  @media screen and (max-width: 760px) {
-    width: 100%;
-  }
-}
-footer .container h2 {
-  position: relative;
-  color: #fff;
-  font-weight: 200;
-  margin-bottom: 20px;
-}
-footer .container h2:before {
-  content: "";
-  position: absolute;
-  bottom: -5px;
-  left: 0;
-  width: 100%;
-  height: 2px;
-  background: #00ffc8;
-}
-
-footer p {
-  color: #d1cfcf;
-}
-
-.icons {
-  margin-top: 20px;
-  color: #fff;
-  display: flex;
-  flex-direction: row;
-}
-.icons ul {
-  list-style: none;
-  display: flex;
-}
-
-.icons ul li {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 40px;
-  height: 40px;
-  font-size: 25px;
-  background: #d1cfcf57;
-  margin-left: 20px;
-  transition: 0.2s ease;
-}
-.icons ul li:hover {
-  background: #d1cfcf;
-}
-.quickLinks {
-  margin-top: 4rem;
-  position: relative;
-  //   width: 65%;
-}
-.quickLinks ul li {
-  color: #d1cfcf;
-  list-style: none;
-  margin-bottom: 10px;
-}
-.quickLinks .links {
-  list-style: none;
-  text-decoration: none;
-  color: #d1cfcf;
-}
-
-.contact {
-  margin-top: 4rem;
-  //   width: calc(35% - 60px);
-}
-.sec.contact ul li {
-  list-style: none;
-  color: #d1cfcf;
-  margin-bottom: 10px;
-}
-.sec.contact span {
-  // margin-left: 1rem;
-}
-.sec.contact span a {
-  text-decoration: none;
-  color: #d1cfcf;
-}
-.copyright {
-  margin-bottom: 2rem;
-  color: #d1cfcf;
-  display: flex;
-  justify-content: center;
-}
-.contact_info {
-  margin: 5rem;
-}
-
-.contact_info_container {
-  display: flex;
-  flex-direction: row !important;
-  margin-bottom: 15rem;
-}
-
-.contact_info_container h3 {
-  color: #fff;
-  font-size: 2.3em;
-  font-weight: 100;
-}
-
-.team_members {
-  margin-top: 3rem;
-}
-.team_members p {
-  color: #d1cfcf;
-}
-.team_members h4 {
-  color: #fff;
-  font-size: 1.5em;
-  font-weight: 100;
-}
-.team_members h4 .test {
-  content: "";
-  bottom: -5px;
-  left: 0;
-  width: 60px;
-  height: 2px;
-  background: #24cca8;
-  margin-bottom: 1rem;
-}
-
-.team_members ul li {
-  list-style: none;
-  color: #d1cfcf;
-  margin: 10px;
-  font-size: 0.9em;
-}
-.team_members ul li span {
-  margin-right: 1rem;
 }
 
 /// header styles
@@ -299,9 +110,12 @@ footer p {
   box-shadow: 0 4px 6px -6px #4140409c;
   width: 100%;
   height: 80px;
-  background: #4f7b87;
+  background: #815c33;
   position: fixed;
   overflow: hidden;
   top: 0;
   z-index: 9;
 }
+
+// color: #d1cfcf;
+// background: #815c33
