--- a/src/styles/directorInfo.scss
+++ b/src/styles/directorInfo.scss
@@ -104,11 +104,10 @@
   transform: translateY(80%);
 }
 .post:hover .video_name h2 {
-  color: #ff331a;
-  transition: 1s ease;
+  color: #fff;
+  transition: 0.8s ease;
   z-index: 2;
-  // font-size: 1.2rem;
-  // font-weight: 500;
+  font-weight: 700;
 }
 .video_name h2 {
   position: absolute;
