--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -66,7 +66,7 @@ $total: 3;
   align-items: center;
   position: fixed;
   top: 0;
-  z-index: 3;
+  z-index: 10000;
 }
 
 .content_links {
@@ -257,10 +257,10 @@ $total: 3;
   top: var(--toggler-offset-top);
   right: var(--toggler-offset-right);
   cursor: pointer;
-  z-index: 4;
+  z-index: 10001;
   @media screen and (max-width: 760px) {
     top: 30px;
-    z-index: 999;
+    z-index: 10001;
   }
 }
 
